--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
         <script type="text/javascript" src="js/bundle.js"></script>
     </head>
     <body ng-app="boilerplate">
-        <div>TODO write content</div>
+        <div>TODO write content 38</div>
     </body>
 </html>
